# Numerical_differentiation

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: VectorFunction.h  function.h  mycomplex.h  mydual.h  myvector.h  vectorfunction.h
src/: VectorFunction.c  function.c  mycomplex.c  mydual.c  myvector.c  vector.c  vectorfunction.c
test/: CMakeLists.txt  testcomplex.c  testcomplexgrad.c  testcomplexjacobi.c  testdualgrad.c  testfunction.c  testfunction.py  testhessian.c  testomp.c  testvectorfunction.c
